--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,17 @@ logging.level.com.nowcoder.community=debug
 # logging.file.name=d:/work/data/nowcoder/community.log
 
 
+# MailProperties
+spring.mail.host=smtp.163.com
+# spring.mail.port=465
+spring.mail.username=13662630661@163.com
+spring.mail.password=KOFSYSOFJKZMKAEV
+# spring.mail.protocol=smtps
+# .mail.properties.mail.smtp.ssl.enable=true
 
+spring.mail.properties.mail.smtl.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
+# community
+community.path.domain=http://localhost:8080
