--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,6 @@ server.servlet.context-path=/community
 # ThymeleafProperties
 spring.thymeleaf.cache=false
 
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.servlet.content-type=text/html
-#spring.thymeleaf.encoding=utf-8
-#spring.thymeleaf.mode=LEGACYHTML5
-#spring.mvc.static-path-pattern=/**
-
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
@@ -29,21 +22,23 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
-logging.level.com.nowcoder.community=debug
-# logging.file.name=d:/work/data/nowcoder/community.log
-
+#logging.level.com.nowcoder.community=debug
+#logging.file=d:/work/data/nowcoder/community.log
 
 # MailProperties
-spring.mail.host=smtp.163.com
-# spring.mail.port=465
-spring.mail.username=13662630661@163.com
-spring.mail.password=KOFSYSOFJKZMKAEV
-# spring.mail.protocol=smtps
-# .mail.properties.mail.smtp.ssl.enable=true
-
-spring.mail.properties.mail.smtl.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=nowcoder@sina.com
+spring.mail.password=nowcoder123
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
 
 # community
 community.path.domain=http://localhost:8080
+community.path.upload=d:/work/data/upload
+
+
+# RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
